--- a/css/index.css
+++ b/css/index.css
@@ -347,5 +347,5 @@ background: #527AE2}
 background-position: bottom left;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size: 40% auto;
+  background-size: 580px auto;
   position: relative;}
