--- a/css/index.css
+++ b/css/index.css
@@ -380,18 +380,21 @@ text-shadow: 2px 2px #ffffff;}
   min-width: 400px;
 }}
 
-#leaf {opacity: .5;
-  margin-left: 30px;}
+#leaf {opacity: .6;
+  left: -100px !important;
+  z-index: 99 !important;}
 
 @media only screen and (max-width: 650px)  {
   #leaf {width: 250px !important;
   height: auto;
 }}
 
-#leafreverse {opacity: .5;
-margin-left: 15px;}
+#leafreverse {opacity: .6;
+  right: -100px !important;
+  z-index: 99 !important;}
 
 @media only screen and (max-width: 650px)  {
   #leafreverse {width: 250px !important;
   height: auto;
 }
+
