--- a/css/index.css
+++ b/css/index.css
@@ -251,6 +251,9 @@ text-shadow: 2px 2px #ffffff;}
       box-shadow: 10px 10px 20px rgba(0,0,0,0.25);
     border-radius: 35px;}
 
+    #searchplant:hover {transform:scale(1.02,1.02);
+      transition: 1s;}
+
       .thinline {height: 2px;
         width: 200px;
         background: #527AE2;
