--- a/css/index.css
+++ b/css/index.css
@@ -246,16 +246,19 @@ text-shadow: 2px 2px #ffffff;}
 .subheadone {text-align: center;}}
 
 @media only screen and (max-width: 600px) {
-  #searchplant{display: block;
+  .searchplant{display: block;
     margin-left: auto;
     margin-right: auto;}}
 
-    #searchplant{
+    .searchplant{
       box-shadow: 10px 10px 20px rgba(0,0,0,0.25);
     border-radius: 35px;}
 
-    #searchplant:hover {transform:scale(1.02,1.02);
+    .searchplant:hover {transform:scale(1.02,1.02);
       transition: 1s;}
+
+
+    
 
       .thinline {height: 2px;
         width: 200px;
