--- a/css/index.css
+++ b/css/index.css
@@ -56,32 +56,32 @@ p4 {
 
 /* Responsive Blank Spaces */
   @media only screen and (min-width: 575px) {
-    .blankSpace {height: 100px !important;
+    .blankSpaceLargeResponsive {height: 100px !important;
     }
     }
 
   @media only screen and (max-width: 575px) {
-    .blankSpace {height: 10px;
+    .blankSpaceLargeResponsive {height: 10px;
       }
     }
 
   @media only screen and (min-width: 575px) {
-    .blankSpaceSmall {height: 70px !important;
+    .blankSpaceResponsive {height: 70px !important;
       }
     }
   
   @media only screen and (max-width: 575px) {
-      .blankSpaceSmall {height: 40px;
+      .blankSpaceResponsive {height: 40px;
         }
       }
 
-  @media only screen and (max-width: 800px) {
-      .blankSpaceHorizontal {width: 00px !important;
-        }
+  @media only screen and (min-width: 575px) {
+    .blankSpaceSmallResponsive {height: 50px !important;
       }
-    
-  @media only screen and (min-width: 800px) {
-      .blankSpaceHorizontal {display: none;
+    }
+  
+  @media only screen and (max-width: 575px) {
+      .blankSpaceSmallResponsive {height: 20px;
         }
       }
 
@@ -316,29 +316,41 @@ p4 {
     }
 
 /* App Download Buttons */
-  #appstore {
+  #appStoreIcon {
     width: 141px !important;
     height: 42px !important;
     margin-bottom: 3%;
     border-radius: 6px;
   }
 
-  #appstore:hover {
+  #appStoreIcon:hover {
     cursor: pointer;
-    opacity: .8;
+    opacity: .9;
   }
 
-  #googleplay {
+  @media only screen and (max-width: 575px) {
+    #appStoreIcon {
+      box-shadow: 5px 5px 10px rgba(0,0,0,0.2);
+    }
+  }
+
+  #googlePlayIcon {
     width: 140px !important;
     height: 42px !important;
     margin-bottom: 3%;
     border-radius: 6px;
   }
 
-  #googleplay:hover {
+  #googlePlayIcon:hover {
     cursor: pointer;
-    opacity: .8;
+    opacity: .9;
   }  
+
+  @media only screen and (max-width: 575px) {
+    #googlePlayIcon {
+      box-shadow: 5px 5px 10px rgba(0,0,0,0.2);
+    }
+  }
 
 /* First Body Section */
   #bodyOne {
@@ -357,13 +369,13 @@ p4 {
   .circularCard {
     width: 150px;
     height: 150px;
-    box-shadow: 10px 10px 20px rgba(0,0,0,0.08);
     border-radius: 100px;
     margin-top: 10px;
     margin-bottom: 10px;
     margin-left: auto;
     margin-right: auto;
     border: 35px solid white;
+    box-shadow: 10px 10px 20px rgba(0,0,0,0.08)
   }
 
   .card-deck {
