--- a/css/index.css
+++ b/css/index.css
@@ -99,9 +99,11 @@ p4 {
     padding-bottom: 5%;
   }
 
-  @media only screen and (min-width: 500px) {
+  @media only screen and (max-width: 500px) {
     #herobg {
       background: url('../images/planthero2.png');
+      background-size: auto 100%;
+      background-repeat: no-repeat;
     }
   }
 
