--- a/css/index.css
+++ b/css/index.css
@@ -563,23 +563,24 @@ p4 {
 
 /* Footer */
   #footer {
-    background: #034001;
+    background: #022601;
     height: 100%;
     text-align: center;
   }
     
-  #footer p2 {
-    color: white;
-    font-weight: 300;
+  #footer p1 {
+    color: #ffffff;
+    opacity: .6;
   }
   
 /* Footer Social Media Icons */ 
   #footer a {
-    font-size: 50px !important;
+    font-size: 40px !important;
   }
     
   #footer a:hover {
-    color: white;
+    color: #ffffff;
+    opacity: .8;
     text-decoration: none;
   }
     
@@ -589,7 +590,7 @@ p4 {
     font-size: 50px;
     text-align: center;
     text-decoration: none;
-    color: white;
+    color: #ffffff;
     }
     
   #firsticon {
